--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to left, blue, red);
+  background: linear-gradient(to left, rgb(74, 111, 244), rgb(235, 120, 201));
   font-family: 'Courier New', Courier, monospace;
 }
 
